fixed google auth

--- a/src/app/popups/two-factor-popup/two-factor-popup.component.html
+++ b/src/app/popups/two-factor-popup/two-factor-popup.component.html
@@ -89,9 +89,9 @@
         </div>
       </div>
 
-      <div *ngSwitchCase="google_disable">
-        <app-google-disable></app-google-disable>
-      </div>
+      <!--<div *ngSwitchCase="google_disable">-->
+        <!--<app-google-disable></app-google-disable>-->
+      <!--</div>-->
 
     </div>
   </div>
