fix trading inputs

--- a/src/app/dashboard/trading/trading.component.scss
+++ b/src/app/dashboard/trading/trading.component.scss
@@ -16,16 +16,16 @@ $darker-blue:#237BEF;
   width: 100%;
 }
 
-//input:not([value=""]){
-//  ~ .wrap-input__label {
-//    top: -5px;
-//    left: 12px;
-//    padding: 0 2px;
-//    background-color: #2B3256;
-//    font-size: 10px;
-//    line-height: 12px;
-//  }
-//}
+input:not([value=""]){
+  ~ .wrap-input__label {
+    top: -5px;
+    left: 12px;
+    padding: 0 2px;
+    background-color: #2B3256;
+    font-size: 10px;
+    line-height: 12px;
+  }
+}
 
 .no-spinners::-webkit-inner-spin-button,
 .no-spinners::-webkit-outer-spin-button {
