--- a/src/app/dashboard/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/currency-pair-info/currency-pair-info.component.html
@@ -2,7 +2,7 @@
   <div class="currency-pair-info__inner">
     <div class="currency-pair-info__pair">
       <div class="dropdown currency-pair-info__dropdown">
-        <div class="" (click)="openSearchBar(0)">{{firstCurrency}}</div>
+        <div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>
         <!--<div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>-->
         <ul class="dropdown__list">
           <li class="dropdown__item">ETH</li>
@@ -12,7 +12,7 @@
       </div>
       <div class="currency-pair-info__change-pair"></div>
       <div class="dropdown currency-pair-info__dropdown">
-        <div class="" (click)="openSearchBar(1)">{{ secondCurrency}}</div>
+        <div class="dropdown__btn" (click)="openSearchBar(1)">{{ secondCurrency}}</div>
         <!--<div class="dropdown__btn" (click)="openSearchBar(1)">{{ secondCurrency}}</div>-->
         <ul class="dropdown__list">
           <li class="dropdown__item">ETH</li>
