--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -131,7 +131,8 @@
       <a class="header__logout" (click)="onLogout()">Log out</a>
     </div>
     <ng-template #alien>
-      <a class="header__logout" (click)="onLogin()">Log in</a>
+      <!--<a class="header__logout" (click)="onLogin()">Log in</a>-->
+      <a class="header__logout" href="https://exrates.me/dashboards" target="_blank">Log in</a>
     </ng-template>
 
     <ul class="menu">
