--- a/src/app/dashboard/currency-pair-info/currency-pair-info.component.html
+++ b/src/app/dashboard/currency-pair-info/currency-pair-info.component.html
@@ -2,7 +2,7 @@
   <div class="currency-pair-info__inner">
     <div class="currency-pair-info__pair">
       <div class="dropdown currency-pair-info__dropdown">
-        <div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>
+        <div class="dropdown__btn" (click)="openSearchBar(0)">{{!firstCurrency ? 'BTC' : firstCurrency}}</div>
         <!--<div class="dropdown__btn" (click)="openSearchBar(0)">{{firstCurrency}}</div>-->
         <ul class="dropdown__list">
           <li class="dropdown__item">ETH</li>
@@ -12,7 +12,7 @@
       </div>
       <div class="currency-pair-info__change-pair"></div>
       <div class="dropdown currency-pair-info__dropdown">
-        <div class="dropdown__btn" (click)="openSearchBar(1)">{{ secondCurrency}}</div>
+        <div class="dropdown__btn" (click)="openSearchBar(1)">{{ !secondCurrency ? 'USD' : secondCurrency}}</div>
         <!--<div class="dropdown__btn" (click)="openSearchBar(1)">{{ secondCurrency}}</div>-->
         <ul class="dropdown__list">
           <li class="dropdown__item">ETH</li>
@@ -23,24 +23,25 @@
     </div>
     <div class="currency-pair-info__info currency-pair-info__info--up">
       <div class="currency-pair-info__change">
-        <span>{{currentCurrencyInfo.percentChange >= 0 ? '+' : '-'}}{{currentCurrencyInfo.percentChange}}%</span>
+        <span>{{!currentCurrencyInfo ? 0 : currentCurrencyInfo.percentChange}}%</span>
+        <!--<span>{{currentCurrencyInfo.percentChange >= 0 ? '+' : '-'}}{{!currentCurrencyInfo.percentChange ? 0 : currentCurrencyInfo.percentChange}}%</span>-->
         <img class="currency-pair-info__arr-up" src="../assets/img/arr-up-green.svg" alt="">
         <img class="currency-pair-info__arr-down" src="../assets/img/arr-down-red.svg" alt="">
-        <span style="margin-left: 10px;">({{(currentCurrencyInfo.currencyRate - currentCurrencyInfo.lastCurrencyRate) | number:'1.1-8' | replaceNumber}} {{ secondCurrency }})</span>
+        <span style="margin-left: 10px;">({{(!currentCurrencyInfo ? 0 :currentCurrencyInfo.currencyRate - currentCurrencyInfo.lastCurrencyRate) | number:'1.1-8' | replaceNumber }} {{ secondCurrency }})</span>
       </div>
-      <div class="currency-pair-info__price">{{currentCurrencyInfo.currencyRate | number:'1.0' | replaceNumber}} {{ secondCurrency }}</div>
+      <div class="currency-pair-info__price">{{!currentCurrencyInfo ? 0 :currentCurrencyInfo.currencyRate | number:'1.0' | replaceNumber }} {{ secondCurrency }}</div>
     </div>
     <div class="currency-pair-info__item">
       <div class="currency-pair-info__item-title">24h hight</div>
-      <span class="currency-pair-info__item-value">{{currentCurrencyInfo.rateHigh | number:'1.0' | replaceNumber}}</span>
+      <span class="currency-pair-info__item-value">{{!currentCurrencyInfo ? 0 :currentCurrencyInfo.rateHigh | number:'1.0' | replaceNumber }}</span>
     </div>
     <div class="currency-pair-info__item">
       <div class="currency-pair-info__item-title">24h low</div>
-      <span class="currency-pair-info__item-value">{{currentCurrencyInfo.rateLow | number:'1.0' | replaceNumber}}</span>
+      <span class="currency-pair-info__item-value">{{ !currentCurrencyInfo ? 0 :currentCurrencyInfo.rateLow | number:'1.0' | replaceNumber}}</span>
     </div>
     <div class="currency-pair-info__item">
       <div class="currency-pair-info__item-title">24h volume</div>
-      <span class="currency-pair-info__item-value">{{currentCurrencyInfo.volume24h | number:'1.0-0' | replaceNumber}} million  {{ firstCurrency }}</span>
+      <span class="currency-pair-info__item-value"> {{!currentCurrencyInfo ?  0  : currentCurrencyInfo.volume24h | number:'1.0-0' | replaceNumber}} million  {{ firstCurrency }}</span>
     </div>
     <div class="currency-pair-info__item" *ngIf="userBalanceInfo">
       <div class="currency-pair-info__item-title">You have</div>
