mobile dashboard menu update

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -198,15 +198,19 @@
   </div>
   <div class="header-mob__inner">
     <div class="header-mob__submenu">
-      <a class="header-mob__submenu-link" (click)="setMobileWidget('graph')">
+      <a class="header-mob__submenu-link"
+         [ngClass]="{ 'header-mob__submenu-link--active': mobileView === 'graph' }"
+         (click)="setMobileWidget('graph')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/graph.svg">
         <span class="header-mob__submenu-link-text">Graph</span>
       </a>
-      <a class="header-mob__submenu-link"  (click)="setMobileWidget('trading')">
+      <a class="header-mob__submenu-link"
+         [ngClass]="{ 'header-mob__submenu-link--active': mobileView === 'trading' }"
+         (click)="setMobileWidget('trading')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/trade.svg">
         <span class="header-mob__submenu-link-text">Trade</span>
       </a>
-      <a class="header-mob__submenu-link" >
+     <!-- <a class="header-mob__submenu-link" >
         <img class="header-mob__submenu-link-img" src="../../assets/img/wallet.svg">
         <span class="header-mob__submenu-link-text">Balances</span>
       </a>
@@ -217,21 +221,27 @@
         <a class="header-mob__submenu-link" (click)="setMobileWidget('orders')">
           <img class="header-mob__submenu-link-img" src="../../assets/img/orders.svg">
           <span class="header-mob__submenu-link-text">Open</span>
-        </a>
-      <a class="header-mob__submenu-link" (click)="setMobileWidget('markets')">
+        </a>-->
+      <a class="header-mob__submenu-link"
+         [ngClass]="{ 'header-mob__submenu-link--active': mobileView === 'markets' }"
+         (click)="setMobileWidget('markets')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/markets.svg">
         <span class="header-mob__submenu-link-text">Markets</span>
       </a>
-      <a class="header-mob__submenu-link" (click)="setMobileWidget('order-book')">
+      <a class="header-mob__submenu-link"
+         [ngClass]="{ 'header-mob__submenu-link--active': mobileView === 'order-book' }"
+         (click)="setMobileWidget('order-book')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/order-book.svg">
         <span class="header-mob__submenu-link-text">Book</span>
       </a>
-      <a class="header-mob__submenu-link" (click)="setMobileWidget('chat')">
+      <a class="header-mob__submenu-link"
+         [ngClass]="{ 'header-mob__submenu-link--active': mobileView === 'chat' }"
+         (click)="setMobileWidget('chat')">
         <img class="header-mob__submenu-link-img" src="../../assets/img/header-sumbenu-link6.svg">
         <span class="header-mob__submenu-link-text">Chat</span>
       </a>
     </div>
-    <a class="header-mob__link header-mob__link-burger" >
+    <a class="header-mob__link header-mob__link-burger">
       <div class="header-mob__link-inner" (click)="openMenu()">
         <img class="header-mob__link-img" src="../../assets/img/header-mob-burger.svg">
       </div>
