--- a/src/assets/scss/components/_currency-pair-info.scss
+++ b/src/assets/scss/components/_currency-pair-info.scss
@@ -5,7 +5,7 @@
   /*--- modificators start ---*/
   &--mob{
     width: 100%;
-    height: 44px;
+    //height: 44px;
     display: block;
   }
   /*--- modificators end ---*/
@@ -49,7 +49,7 @@
     align-self: stretch;
     flex-direction: column;
     justify-content: center;
-    padding: 0 0 0 8px;
+    padding: 12px 0 12px 8px;
     margin-left: auto;
     &--up {
       background: radial-gradient(circle at 0% 50%, rgba(0, 180, 60, .2) 0%, rgba(0, 180, 60, 0) 100%);
