--- a/src/assets/scss/components/_widget.scss
+++ b/src/assets/scss/components/_widget.scss
@@ -122,7 +122,7 @@
   }
   &__graph {
     position: relative;
-    height: calc(100% - 45px);
+    height: calc(100% - 64px);
     overflow-x: hidden;
     overflow-y: auto;
     &--mob {
@@ -251,11 +251,12 @@
     }
     .change-indicate{
       &--green{
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        display: inline-block;
+        text-align: center;
+        line-height: 25px;
         height: 25px;
-        width: 60px;
+        min-width: 60px;
+        max-width: 100px;
         margin-left: auto;
         margin-right: 16px;
         color: $green;
@@ -267,11 +268,12 @@
         }
       }
       &--red{
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        display: inline-block;
+        text-align: center;
+        line-height: 25px;
         height: 25px;
-        width: 60px;
+        min-width: 60px;
+        max-width: 100px;
         margin-left: auto;
         margin-right: 16px;
         color:$red;
