--- a/src/assets/scss/components/_input.scss
+++ b/src/assets/scss/components/_input.scss
@@ -139,7 +139,11 @@
     padding: 0 12px;
     border: 1px solid $grey;
     border-bottom: none;
+    -webkit-border-radius: 0;
+    border-radius: 0;
+    -webkit-border-top-left-radius: 4px;
     border-top-left-radius: 4px;
+    -webkit-border-top-right-radius: 4px;
     border-top-right-radius: 4px;
     font-size: 14px;
     background-color: transparent;
@@ -166,9 +170,9 @@
         font-size: 10px;
         line-height: 12px;
       }
-      ~.wrap-input__icon{
-        svg{
-          fill:$darker-blue;
+      ~ .wrap-input__icon {
+        svg {
+          fill: $darker-blue;
         }
       }
       ~ .wrap-input__line {
