--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -194,7 +194,7 @@
 
   <div class="widget__content widget__content--mob" *ngIf="!marketSearch">
     <!--table mob start-->
-    <perfect-scrollbar style=" " [config]="config">
+    <perfect-scrollbar>
     <table class="table widget__table widget__table--mob widget__table-markets-mob">
       <thead>
       <tr>
@@ -214,25 +214,25 @@
       <tbody>
 
       <ng-container *ngFor="let pair of pairs | currencySort:'volume'">
-      <tr class="table__row widget__table-row" (click)="onSelectCurrencyPair(pair)">
+      <tr class="table__row widget__table-row">
         <td class="table__cell table__cell--tac">
-    <span class="table__row-star">
+    <span class="table__row-star" [ngClass]="{'table__row-star--select': isFavourite(pair)}" (click)="toggleFavourite(pair)">
     <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
     <path
       d="M6.52447 0.463524C6.67415 0.00286841 7.32585 0.00286996 7.47553 0.463525L8.68386 4.18237C8.75079 4.38838 8.94277 4.52786 9.15938 4.52786H13.0696C13.554 4.52786 13.7554 5.14767 13.3635 5.43237L10.2001 7.73075C10.0248 7.85807 9.95149 8.08375 10.0184 8.28976L11.2268 12.0086C11.3764 12.4693 10.8492 12.8523 10.4573 12.5676L7.29389 10.2693C7.11865 10.1419 6.88135 10.1419 6.70611 10.2693L3.54267 12.5676C3.15081 12.8523 2.62357 12.4693 2.77325 12.0086L3.98157 8.28976C4.04851 8.08375 3.97518 7.85807 3.79994 7.73075L0.636495 5.43237C0.244639 5.14767 0.446028 4.52786 0.93039 4.52786H4.84062C5.05723 4.52786 5.24921 4.38838 5.31614 4.18237L6.52447 0.463524Z"/>
     </svg>
     </span>
         </td>
-        <td class="table__cell">
+        <td class="table__cell" (click)="onSelectCurrencyPair(pair)">
           <span>{{splitPairName(pair)[0]}}</span>
           <span style="font-size: 10px; color:#A0A0A0">/ <span>{{splitPairName(pair)[1]}}</span></span>
           <div class="txt-small txt-light-grey">Vol {{ +pair.volume | number: '1.0-0' | replaceNumber}}</div>
         </td>
-        <td class="table__cell">
+        <td class="table__cell" (click)="onSelectCurrencyPair(pair)">
           <span class="txt-indicate">{{pair.lastOrderRate | replaceNumber}}</span>
           <div class="txt-small txt-light-grey">$ 417.00</div>
         </td>
-        <td class="table__cell table__cell--tar">
+        <td class="table__cell table__cell--tar" (click)="onSelectCurrencyPair(pair)">
           <span class=""
                 [ngClass]="{'change-indicate--green': isChangePositive(pair), 'change-indicate--red': !isChangePositive(pair)}">
             {{pair.percentChange >= 0 ? '+' : ''}}{{pair.percentChange | replaceNumber}} <span>%</span></span>
