fixed favourite for mobile

--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -270,7 +270,10 @@
       >
         USD
       </button>
-      <button class="tabs__item">
+      <button class="tabs__item"
+              [ngClass]="{'tabs__item--active': currencyDisplayMode === 'Favorites','tab-no-active': currencyDisplayMode !== 'Favorites'}"
+              (click)="selectedTab('FAVOURITE')"
+      >
         <span>
           <svg width="14" height="13" viewBox="0 0 14 13" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path
