--- a/src/app/dashboard/order-book/order-book.component.html
+++ b/src/app/dashboard/order-book/order-book.component.html
@@ -1,7 +1,7 @@
 <div class="widget widget--gradient">
   <!--<div class="order-book-bg order-book-bg&#45;&#45;green" [ngClass]="{'show': isBuy}"></div>-->
   <!--<div class="order-book-bg order-book-bg&#45;&#45;red" [ngClass]="{'show': !isBuy}"></div>-->
-  <div class="order-book-bg order-book-bg--main" [ngClass]="{'show': !isBuy}"></div>
+  <div class="order-book-bg order-book-bg--main" #mainContent [ngClass]="{'show': !isBuy}"></div>
   <div class="widget__header panel-heading">
     <span class="widget__name">Order book</span>
     <a href="#" class="widget__question">
@@ -52,14 +52,14 @@
       <div class="items items--sell">
 
         <div class="visualization">
-            <ng-container *ngFor="let item of dataForSell; let i = index">
-                <div class="visual-item" [ngClass]="'red'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, false) + '%'">
-                  <div class="border-container" *ngIf="i < 8 && withForChartLineElements && withForChartLineElements.sell.length">
-                    <div class="border-border sell" [style.width]="withForChartLineElements.sell[i]">
-                    </div>
-                  </div>
+          <ng-container *ngFor="let item of dataForSell; let i = index">
+            <div class="visual-item" [ngClass]="'red'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, false) + '%'">
+              <div class="border-container" *ngIf="i < 8 && withForChartLineElements && withForChartLineElements.sell.length">
+                <div class="border-border sell" [style.width]="withForChartLineElements.sell[i]">
                 </div>
-            </ng-container>
+              </div>
+            </div>
+          </ng-container>
         </div>
         <div class="item" *ngFor="let item of dataForSell; let i = index" (click)="onSelectOrder(i, item, 'trading')">
           <div class="order">
@@ -67,57 +67,58 @@
               {{item.amountBase | number:'1.1-8' | replaceNumber}}
             </span>
           </div>
-        
+
           <div class="info">
             <span>
             </span>
           </div>
-        
+
           <div class="price">
             <span>
               {{item.exrate | number:'1.1-8' | replaceNumber}}
             </span>
           </div>
-        
+
           <div class="total">
             <span>
               {{item.amountConvert | number:'1.1-8' | replaceNumber}}
             </span>
           </div>
-        
+
         </div>
         <!--<div class="visual-item" [ngClass]="'red'" *ngFor="let item of dataForSell" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, false)"-->
-            <!--[style.height]="(elementHeight/dataForSell.length) + 'px'"></div>-->
+        <!--[style.height]="(elementHeight/dataForSell.length) + 'px'"></div>-->
         <!--</div>-->
         <!--<div class="item" *ngFor="let item of dataForSell; let i = index" (click)="onSelectOrder(i, item)">-->
-          <!--<div class="order" [style.lineHeight]="(elementHeight/dataForSell.length) + 'px'" [style.height]="(elementHeight/dataForSell.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.amountBase | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="order" [style.lineHeight]="(elementHeight/dataForSell.length) + 'px'" [style.height]="(elementHeight/dataForSell.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.amountBase | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="info" [style.lineHeight]="(elementHeight/dataForSell.length) + 'px'" [style.height]="(elementHeight/dataForSell.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.exrate | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="info" [style.lineHeight]="(elementHeight/dataForSell.length) + 'px'" [style.height]="(elementHeight/dataForSell.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.exrate | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="price" [style.lineHeight]="(elementHeight/dataForSell.length) + 'px'" [style.height]="(elementHeight/dataForSell.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.exrate | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="price" [style.lineHeight]="(elementHeight/dataForSell.length) + 'px'" [style.height]="(elementHeight/dataForSell.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.exrate | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="total" [style.lineHeight]="(elementHeight/dataForSell.length) + 'px'" [style.height]="(elementHeight/dataForSell.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.amountConvert | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="total" [style.lineHeight]="(elementHeight/dataForSell.length) + 'px'" [style.height]="(elementHeight/dataForSell.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.amountConvert | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
         <!--</div>-->
       </div>
       <div class="separator" *ngIf="lastOrder">
-        <span *ngIf="maxExrate" [ngClass]="{'color-red': !lastOrderUp, 'color-green': lastOrderUp}">{{lastOrder.exrate | number:'1.1-8' | replaceNumber}}</span>
+        <span *ngIf="maxExrate" [ngClass]="{'color-red': !lastOrderUp, 'color-green': lastOrderUp}">{{lastOrder.exrate
+          | number:'1.1-8' | replaceNumber}}</span>
         <img *ngIf="lastOrderUp" class="currency-pair-info__arr-up" src="../assets/img/arr-up-green.svg" alt="">
         <img *ngIf="!lastOrderUp" class="currency-pair-info__arr-down" src="../assets/img/arr-down-red.svg" alt="">
         <div class="hr"></div>
@@ -130,14 +131,14 @@
             <div class="visual-item" [ngClass]="'green'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, true) + '%'">
               <div class="border-container" *ngIf="i > 0 && withForChartLineElements && withForChartLineElements.buy.length">
                 <div class="border-border buy" [style.width]="withForChartLineElements.buy[i-1]">
-            
+
                 </div>
               </div>
             </div>
           </ng-container>
 
           <!--<div class="visual-item" [ngClass]="'green'" *ngFor="let item of dataBurBuy" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, true)"-->
-               <!--[style.height]="(200/dataBurBuy.length) + 'px'"></div>-->
+          <!--[style.height]="(200/dataBurBuy.length) + 'px'"></div>-->
         </div>
 
         <div class="item" *ngFor="let item of dataBurBuy; let i = index" (click)="onSelectOrder(i, item)">
@@ -146,51 +147,51 @@
               {{item.amountBase | number:'1.1-8' | replaceNumber}}
             </span>
           </div>
-        
+
           <div class="info">
             <!--<span>-->
             <!--{{item.exrate | number:'1.1-8'}}-->
             <!--</span>-->
           </div>
-        
+
           <div class="price">
             <span>
               {{item.exrate | number:'1.1-8' | replaceNumber}}
             </span>
           </div>
-        
+
           <div class="total">
             <span>
               {{item.amountConvert | number:'1.1-8' | replaceNumber}}
             </span>
           </div>
-        
+
         </div>
 
         <!--<div class="item" *ngFor="let item of dataBurBuy; let i = index" (click)="onSelectOrder(i, item)">-->
-          <!--<div class="order" [style.lineHeight]="(elementHeight/dataBurBuy.length) + 'px'" [style.height]="(elementHeight/dataBurBuy.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.amountBase | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="order" [style.lineHeight]="(elementHeight/dataBurBuy.length) + 'px'" [style.height]="(elementHeight/dataBurBuy.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.amountBase | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="info" [style.lineHeight]="(elementHeight/dataBurBuy.length) + 'px'" [style.height]="(elementHeight/dataBurBuy.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.exrate | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="info" [style.lineHeight]="(elementHeight/dataBurBuy.length) + 'px'" [style.height]="(elementHeight/dataBurBuy.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.exrate | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="price" [style.lineHeight]="(elementHeight/dataBurBuy.length) + 'px'" [style.height]="(elementHeight/dataBurBuy.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.exrate | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="price" [style.lineHeight]="(elementHeight/dataBurBuy.length) + 'px'" [style.height]="(elementHeight/dataBurBuy.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.exrate | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="total" [style.lineHeight]="(elementHeight/dataBurBuy.length) + 'px'" [style.height]="(elementHeight/dataBurBuy.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.amountConvert | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="total" [style.lineHeight]="(elementHeight/dataBurBuy.length) + 'px'" [style.height]="(elementHeight/dataBurBuy.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.amountConvert | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
         <!--</div>-->
       </div>
@@ -223,10 +224,16 @@
       <div class="items mobile">
 
         <div class="visualization">
-          <div class="visual-item" [ngClass]="'red'" *ngFor="let item of dataForSell" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, false) + '%'" >
-          </div>
+          <ng-container *ngFor="let item of dataForSell; let i = index">
+            <div class="visual-item" [ngClass]="'red'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, false) + '%'">
+              <div class="border-container" *ngIf="i < 8 && withForChartLineElements && withForChartLineElements.sell.length">
+                <div class="border-border sell" [style.width]="withForChartLineElements.sell[i]">
+                </div>
+              </div>
+            </div>
+          </ng-container>
           <!--<div class="visual-item" [ngClass]="'red'" *ngFor="let item of dataForSell" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, false)"-->
-            <!--[style.height]="(elementHeightMobile/dataForSell.length) + 'px'">-->
+          <!--[style.height]="(elementHeightMobile/dataForSell.length) + 'px'">-->
           <!--</div>-->
         </div>
         <div class="item" *ngFor="let item of dataForSell; let i = index" (click)="onSelectOrder(i, item, 'trading')">
@@ -256,29 +263,29 @@
 
         </div>
         <!--<div class="item" *ngFor="let item of dataForSell; let i = index" (click)="onSelectOrder(i, item)">-->
-          <!--<div class="order" [style.lineHeight]="(elementHeightMobile/dataForSell.length) + 'px'" [style.height]="(elementHeightMobile/dataForSell.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.amountBase | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="order" [style.lineHeight]="(elementHeightMobile/dataForSell.length) + 'px'" [style.height]="(elementHeightMobile/dataForSell.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.amountBase | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="info" [style.lineHeight]="(elementHeightMobile/dataForSell.length) + 'px'" [style.height]="(elementHeightMobile/dataForSell.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.exrate | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="info" [style.lineHeight]="(elementHeightMobile/dataForSell.length) + 'px'" [style.height]="(elementHeightMobile/dataForSell.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.exrate | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="price" [style.lineHeight]="(elementHeightMobile/dataForSell.length) + 'px'" [style.height]="(elementHeightMobile/dataForSell.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.exrate | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="price" [style.lineHeight]="(elementHeightMobile/dataForSell.length) + 'px'" [style.height]="(elementHeightMobile/dataForSell.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.exrate | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="total" [style.lineHeight]="(elementHeightMobile/dataForSell.length) + 'px'" [style.height]="(elementHeightMobile/dataForSell.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.amountConvert | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="total" [style.lineHeight]="(elementHeightMobile/dataForSell.length) + 'px'" [style.height]="(elementHeightMobile/dataForSell.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.amountConvert | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
         <!--</div>-->
       </div>
@@ -289,11 +296,18 @@
       </div>
       <div class="items mobile">
 
-        <div class="visualization" >
-          <div class="visual-item" [ngClass]="'green'" *ngFor="let item of dataBurBuy; let i = index" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, true) + '%'">
-          </div>
+        <div class="visualization">
+          <ng-container *ngFor="let item of dataBurBuy; let i = index">
+            <div class="visual-item" [ngClass]="'green'" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, true) + '%'">
+              <div class="border-container" *ngIf="i > 0 && withForChartLineElements && withForChartLineElements.buy.length">
+                <div class="border-border buy" [style.width]="withForChartLineElements.buy[i-1]">
+
+                </div>
+              </div>
+            </div>
+          </ng-container>
           <!--<div class="visual-item" [ngClass]="'green'" *ngFor="let item of dataBurBuy" [style.width]="getPercentageOfTheMuxBuyOrSell(item.exrate, true)"-->
-            <!--[style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">-->
+          <!--[style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">-->
           <!--</div>-->
         </div>
         <div class="item" *ngFor="let item of dataBurBuy; let i = index" (click)="onSelectOrder(i, item, 'trading')">
@@ -323,29 +337,29 @@
 
         </div>
         <!--<div class="item" *ngFor="let item of dataBurBuy; let i = index" (click)="onSelectOrder(i, item)">-->
-          <!--<div class="order" [style.lineHeight]="(elementHeightMobile/dataBurBuy.length) + 'px'" [style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.amountBase | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="order" [style.lineHeight]="(elementHeightMobile/dataBurBuy.length) + 'px'" [style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.amountBase | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="info" [style.lineHeight]="(elementHeightMobile/dataBurBuy.length) + 'px'" [style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.exrate | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="info" [style.lineHeight]="(elementHeightMobile/dataBurBuy.length) + 'px'" [style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.exrate | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="price" [style.lineHeight]="(elementHeightMobile/dataBurBuy.length) + 'px'" [style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.exrate | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="price" [style.lineHeight]="(elementHeightMobile/dataBurBuy.length) + 'px'" [style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.exrate | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
-          <!--<div class="total" [style.lineHeight]="(elementHeightMobile/dataBurBuy.length) + 'px'" [style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">-->
-            <!--<span>-->
-              <!--{{item.amountConvert | number:'1.1-8'}}-->
-            <!--</span>-->
-          <!--</div>-->
+        <!--<div class="total" [style.lineHeight]="(elementHeightMobile/dataBurBuy.length) + 'px'" [style.height]="(elementHeightMobile/dataBurBuy.length) + 'px'">-->
+        <!--<span>-->
+        <!--{{item.amountConvert | number:'1.1-8'}}-->
+        <!--</span>-->
+        <!--</div>-->
 
         <!--</div>-->
       </div>
