--- a/src/assets/scss/pages/_referral.scss
+++ b/src/assets/scss/pages/_referral.scss
@@ -6,6 +6,153 @@
   }
   /*--- modificators end ---*/
   /*--- elements start ---*/
+  &__header-mob{
+    display: flex;
+    align-items: center;
+    margin:12px;
+  }
+  &__page-title{
+    font-size: 24px;
+    line-height: 28px;
+  }
+  &__filter-btn{
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    color: $darker-blue;
+    svg{
+      fill: $darker-blue;
+      margin-right: 4px;
+    }
+  }
+  //structure start
+  &__create-structure{
+    padding: 0 16px;
+    margin-bottom: 28px;
+  }
+  .ref-copy{
+    margin-left: 8px;
+    &:hover{
+      cursor: pointer;
+    }
+    svg{
+      stroke: $darker-blue;
+    }
+  }
+
+  &__structure-title{
+    font-size: 18px;
+    margin-bottom: 16px;
+  }
+  &__structure-input{
+    margin-bottom: 20px;
+  }
+  &__people-icon {
+    margin-right: 8px;
+    svg {
+      vertical-align: middle;
+      fill: $darker-blue;
+    }
+  }
+  //structure end
+  //steps start
+  &__steps-block{
+    position: relative;
+    margin-top: 20px;
+  }
+  &__btn-toggler{
+    &--active{
+      z-index: 3;
+      background-color: $darker-blue;
+      color: #fff;
+      &:after{
+        content:'';
+        display: block;
+        width: 100%;
+        position: absolute;
+        z-index: -1;
+        top: 50%;
+        left: 0;
+        height: 1px;
+        background-color: $darker-blue;
+      }
+    }
+  }
+  &__steps-wrap{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 20px;
+    &--hide{
+      display: none;
+    }
+  }
+  &__step{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 180px;
+    padding: 0px 8px;
+    &--card{
+      padding: 20px 8px 4px;
+      max-width: 170px;
+      box-shadow: 0 0 14px rgba(0, 0, 0, 0.2);
+    }
+  }
+  &__step-img{
+    margin-bottom: 12px;
+    svg{
+      fill:$darker-blue;
+    }
+  }
+  &__step-circle{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-bottom: 12px;
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.2);
+    font-size: 36px;
+    &--blue{
+      background-color: $darker-blue;
+    }
+    span{
+      font-size: 24px;
+    }
+  }
+  &__step-title{
+    font-size: 14px;
+    line-height: 23px;
+    text-align: center;
+  }
+  &__step-subtitle{
+    font-size: 12px;
+    line-height: 18px;
+    text-align: center;
+    color:$darker-blue;
+    margin-top: 12px;
+  }
+  &__step-number{
+    font-size: 36px;
+    line-height: 42px;
+    color:$darker-blue;
+  }
+  &__step-arr{
+    margin-top: 68px;
+    &--asc{
+      margin: 16px 0;
+      align-self: center;
+    }
+    svg{
+      stroke:$darker-white;
+    }
+  }
+  //steps end
   /*--- elements end ---*/
 }
 
@@ -57,10 +204,6 @@
     }
     &__people-icon {
       margin-right: 12px;
-      svg {
-        vertical-align: middle;
-        fill: $darker-blue;
-      }
     }
     .table__row {
       & td:nth-child(1) {
@@ -158,13 +301,18 @@
     }
     &__create-structure{
       flex-grow: 1;
+      margin-bottom: 0;
       margin-left: 40px;
+      padding: 0;
     }
     &__structure-title{
+      font-size: 24px;
+      line-height: 28px;
       margin-bottom: 20px;
     }
     &__structure-input{
       margin-right: 32px;
+      margin-bottom: 0;
     }
     //structure end
     //steps start
@@ -176,41 +324,26 @@
     }
     &__steps-wrap{
       display: flex;
+      flex-direction: row;
+      align-items: stretch;
       justify-content: space-between;
+      margin-top: 0;
     }
     &__step{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       max-width: 240px;
       padding: 24px 16px 4px;
       &--card{
         max-width: 200px;
-        box-shadow: 0 0 14px rgba(0, 0, 0, 0.2);
       }
     }
     &__step-img{
       margin-bottom: 16px;
-      svg{
-        fill:$darker-blue;
-      }
     }
     &__step-circle{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      -webkit-border-radius: 50%;
-      -moz-border-radius: 50%;
-      border-radius: 50%;
       width: 140px;
       height: 140px;
       margin-bottom: 16px;
-      box-shadow: 0 0 14px rgba(0, 0, 0, 0.2);
       font-size: 48px;
-      &--blue{
-        background-color: $darker-blue;
-      }
       span{
         font-size: 26px;
       }
@@ -218,13 +351,10 @@
     &__step-title{
       font-size: 18px;
       line-height: 27px;
-      text-align: center;
     }
     &__step-subtitle{
       font-size: 14px;
       line-height: 21px;
-      text-align: center;
-      color:$darker-blue;
       margin-top: 16px;
     }
     &__step-number{
@@ -237,9 +367,6 @@
       &--asc{
         margin-top: 0;
         align-self: center;
-      }
-      svg{
-        stroke:$darker-white;
       }
     }
     //step end
@@ -320,6 +447,13 @@
 /*--- DARK THEME START---*/
 .dark-theme {
   .referral {
+    &__filter-btn{
+      margin-left: auto;
+      color: $light-blue;
+      svg{
+        fill: $light-blue;
+      }
+    }
     &__step-subtitle{
       color:$light-blue;
     }
@@ -330,6 +464,23 @@
       svg{
         stroke:$light-blue;
         opacity: .3;
+      }
+    }
+    &__people-icon {
+      svg {
+        fill: $light-blue;
+      }
+    }
+    &__btn-toggler{
+      &--active{
+        border-color: $darker-blue ;
+        background-color: $darker-blue;
+        color: #fff;
+      }
+    }
+    &__step-img{
+      svg{
+        fill:$light-blue;
       }
     }
   }
@@ -354,11 +505,7 @@
           fill: $light-blue;
         }
       }
-      &__people-icon {
-        svg {
-          fill: $light-blue;
-        }
-      }
+
       .ref-copy{
         svg{
           stroke: $light-blue;
